--- a/main.css
+++ b/main.css
@@ -2407,6 +2407,125 @@ button.passwordArr {
 
 
 /* ------------------- Responsive grid -------------------*/
+/* ------------------- Slide 2 -------------------*/
+body {
+    font-family: sans-serif;
+  }
+  
+  .LRcarousel {
+    margin: 0 auto;
+    text-align: center;
+    overflow: hidden;
+    display: flex;
+  
+  }
+  
+  .LRslides {
+    height: 500px;
+    width:100%;
+    display: flex;
+    flex-direction: column;
+    overflow-y: scroll;
+    scrollbar-width: none;
+    scroll-snap-type: y mandatory;
+    scroll-behavior: smooth;
+  
+  }
+  
+  .LRslides::-webkit-scrollbar {
+    display: none;
+  }
+  
+  .slides-item {
+    align-items: center;
+    border-radius: 10px;
+    display: flex;
+    flex-shrink: 0;
+    font-size: 100px;
+    height: 100%;
+    width: 100%;
+  
+    justify-content: center;
+    margin: 0;
+    position: relative;
+    scroll-snap-align: start;
+    transform: scale(1);
+    transform-origin: center center;
+    transition: transform .5s;
+  }
+  
+  .carousel__nav {
+    padding: 1.25rem 0.5rem;
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .slider-nav {
+     align-items: center;
+    background-color: #ddd;
+    border-radius: 2px;
+    color: #000;
+    display: inline-flex;
+    height: 1.5rem;
+    justify-content: center;
+    padding: 0.5rem;
+    position: relative;
+    text-decoration: none;
+    width: 6.5rem;
+    /* Add a smooth transition for the background-color and color properties */
+    transition: background-color 0.3s, color 0.3s;
+  }
+  
+  .slider-nav:active, .slider-nav:hover, .slider-nav.active{
+    background-color: #000;
+    color: #fff;
+  }
+  
+  .slide-1 {
+    background-color: #fdc;
+  }
+  
+  .slide-2 {
+    background-color: #bfd;
+  }
+  
+  .slide-3 {
+    background-color: #cdf;
+  }
+  
+  .slide-4 {
+    background-color: #dca;
+  }
+  
+  .slide-5 {
+    background-color: #ffc;
+  }
+  
+  .carousel__skip-link {
+    height: 1px;
+    overflow: hidden;
+    position: absolute;
+    top: auto;
+    width: 1px;
+  }
+  
+  .carousel__skip-link:focus {
+    align-items: center;
+    background-color: #000;
+    color: #fff;
+    display: flex;
+    font-size: 30px;
+    height: 680px;
+    justify-content: center;
+    opacity: 0.8;
+    text-decoration: none;
+    width: 100%;
+    z-index: 1;
+  }
+  
+
+/* ------------------- Slide 2 -------------------*/
+
 /* ------------------- New Slider -------------------*/
 
 
@@ -2796,148 +2915,7 @@ input:checked~label.SEER {
 }
 
 /* ============== End Testimonial Flexbox ============= */
-/* ============== slideshow update ============= */
 
-
-.LRCarouselContainer {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    position: relative;
-    overflow: hidden;
-    width: 100%;
-    height: 110vh;
-    display: flex;
-    margin: auto;
-    align-items: center;
-    justify-content: center;
-}
-
-.LRCarouselContainer {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: row;
-    flex-direction: row;
-    min-height: auto;
-    height: 660px;
-    /* position: absolute; */
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-}
-.LRCarouselLeftZone {
-    height: 50%;
-    -webkit-box-flex: 0;
-    -ms-flex: 0 0 auto;
-    flex: 0 0 auto;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    width: 100%;
-}
-
-.LRCarouselLeftZone .list {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    list-style: none;
-    -ms-flex-line-pack: stretch;
-    align-content: stretch;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    -webkit-box-flex: 1;
-    -ms-flex: 1 1 auto;
-    flex: 1 1 auto;
-    margin: auto;
-    padding: 0;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-}
-
-label {
-    display: block;
-    opacity: 0.5;
-    height: 46px;
-    text-align: center;
-    line-height: 46px;
-    position: relative;
-    color: var(--Grey800);
-}
-
-label:hover {
-    opacity: 0.75;
-    cursor: pointer;
-    background-color: var(--Grey200);
-}
-
-.LRCarouselContent {
-    position: absolute;
-    right: 5%;
-    bottom: 0;
-    opacity: 0;
-    -webkit-transform: translateY(100%);
-    -ms-transform: translateY(100%);
-    transform: translateY(100%);
-    height: 40%;
-    width: 100%;
-    -webkit-transition: 0.5s ease-out;
-    -o-transition: 0.5s ease-out;
-    transition: 0.5s ease-out;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    pointer-events: none;
-}
-
-.LRCarouselContent p {
-    max-width: 50%;
-    text-align: center;
-}
-
-.LRCarouselRightZone {
-    width: 100%;
-    -webkit-box-flex: 1;
-    -ms-flex: 1 0 auto;
-    flex: 1 0 auto;
-    height: 50%;
-}
-
-input:checked~.LRCarouselContent {
-    -webkit-transform: translateY(0%);
-    -ms-transform: translateY(0%);
-    transform: translateY(0%);
-    -webkit-transition: -webkit-transform 1s;
-    transition: -webkit-transform 1s;
-    -o-transition: transform 1s;
-    transition: transform 1s;
-    transition: transform 1s, -webkit-transform 1s;
-    opacity: 1;
-}
-
-input:checked~label {
-    opacity: 1;
-    -webkit-animation: all 1s cubic-bezier(0.455, 0.03, 0.515, 0.955);
-    animation: all 1s cubic-bezier(0.455, 0.03, 0.515, 0.955);
-}
-
-input:checked~label {
-    color: var(--Grey900);
-    border-right: solid 4px var(--Grey900);
-}
-
-/* ============== slideshow update ============= */
 
 body .flex-container.BP {
     -webkit-box-orient: horizontal;
