--- a/main.css
+++ b/main.css
@@ -43,7 +43,7 @@ html {
     --Grey200: #f2f2f2;
     /* F8F8F8, f2f2f2*/
 
-    --Grey100: #F8F8F8;
+    --Grey100: #fafafa;
 
     /* #296448, 6eacd9, 0762ff,4f3cc9 88c5f0 current green 1b563b*/
     --colorTealDk: #8fbfbf;
@@ -95,6 +95,7 @@ html {
 
 
 }
+
 body {
     width: 100%;
     height: 100%;
@@ -193,6 +194,7 @@ body {
 .colorBgGrey {
     background-color: var(--Grey200);
 }
+
 .colorBgGrey100 {
     background-color: var(--Grey100);
 }
@@ -1555,9 +1557,9 @@ button.passwordArr {
 }
 
 .accordion {
+    /*    border-bottom: 1px solid var(--Grey200);
+*/
     margin: 0;
-    background-color: var(--Grey100);
-    border-bottom: 1px solid var(--Grey300);
     color: var(--Grey900);
     cursor: pointer;
     padding: 15px 20px;
@@ -1565,11 +1567,19 @@ button.passwordArr {
     --webkit-flex-flow: row wrap;
     justify-content: space-between;
     align-items: center;
-    transition: background-color 0.2s linear;
+    transition: background-color 0.3s linear;
 }
 
 /* accordion */
 
+
+.accordionBorderTop {
+    border-radius: 8px 8px 0px 0px;
+}
+
+.accordionBorderBottom {
+    border-radius: 0px 0px 8px 8px;
+}
 
 .accordion:after {
     content: "";
@@ -1590,15 +1600,27 @@ button.passwordArr {
 
 .accordion:hover,
 .accordion.is-open {
-    border: 1px solid var(--Grey300);
-    background-color: var(--Grey200);
+    box-shadow: inset -1px 0 0 var(--Grey200), inset 0 0px 0 var(--Grey200), inset 1px 0 0  var(--Grey200), inset 0 1px 0  var(--Grey200);
 
+    /*    
+
+    border-left: 1px solid var(--Grey200);
+    border-right: 1px solid var(--Grey200);
+    border-top: 1px solid var(--Grey200);
+
+    border: 1px solid var(--Grey300);
+    background-color: var(--Grey100);
+*/
 }
 
 .accordion-content {
-    background-color: var(--Grey100);
+    /*    background-color: var(--Grey100);
+
+*/
+    border-bottom: 1px solid var(--Grey200);
     border-left: 1px solid var(--Grey200);
     border-right: 1px solid var(--Grey200);
+
     padding: 0 20px;
     max-height: 0;
     overflow: hidden;
@@ -2468,11 +2490,11 @@ button.passwordArr {
     margin: 0;
     position: relative;
     text-decoration: none;
-    width:100%;
+    width: 100%;
     display: flex;
     align-items: flex-start;
     flex-direction: column;
-    
+
     /*     
     transition: background-color 0.3s, color 0.3s;
     -webkit-transition: 1s ease-out;
@@ -2783,6 +2805,7 @@ button.passwordArr {
     align-items: center;
     justify-content: center;
 }
+
 .flex-container {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
@@ -2796,6 +2819,7 @@ button.passwordArr {
     left: 0;
     right: 0;
 }
+
 /* ------------------- 
 
     -ms-flex-wrap: wrap;
@@ -3551,7 +3575,7 @@ polygon {
 }
 
 .border-radius {
-    border-radius: 0.6em;
+    border-radius: 6px;
 }
 
 .lineHorizAll {
