--- a/main.css
+++ b/main.css
@@ -241,7 +241,7 @@ body {
     left: 0;
     right: 0;
     margin: 0 auto;
-    max-width: 1240px;
+    max-width: 1160px;
     width: 100%;
     height: 4em;
     text-align: center;
@@ -587,9 +587,7 @@ section {
 }
 
 @media all and (min-width: 1880px) {
-    body .logo {
-        padding: 1.6em;
-    }
+
 
     body .blankMin1880 {
         height: 8rem;
@@ -831,11 +829,13 @@ li .newPanel {
     font-size: 12px;
     line-height: 16px;
 }
+
 li .newPanelV3 {
     /*for V3     display: none; */
     font-size: 14px;
     line-height: 14px;
 }
+
 .newTitlePanel {
     font-size: 18px;
     line-height: 16px;
@@ -986,9 +986,11 @@ layout **/
 section {
     padding-top: 5em;
 }
+
 section .padding {
     padding-top: 5em;
 }
+
 .colorAPPOINTAYellow::selection {
     background: var(--APPOINTA-yellow);
     color: var(--white);
@@ -1603,7 +1605,7 @@ button.passwordArr {
 
 .accordion:hover,
 .accordion.is-open {
-    box-shadow: inset -1px 0 0 var(--Grey200), inset 0 0px 0 var(--Grey200), inset 1px 0 0  var(--Grey200), inset 0 1px 0  var(--Grey200);
+    box-shadow: inset -1px 0 0 var(--Grey200), inset 0 0px 0 var(--Grey200), inset 1px 0 0 var(--Grey200), inset 0 1px 0 var(--Grey200);
 
     /*    
 
@@ -1769,6 +1771,9 @@ button.passwordArr {
 
 
 @media all and (max-width: 1080px) {
+    body .logo {
+        padding: 0.5em 1em;
+    }
 
     body .se-arrow {
         width: 1.3em;
@@ -1973,9 +1978,7 @@ button.passwordArr {
         width: 2em;
     }
 
-    body .logo {
-        padding: 1.6em;
-    }
+
 
     .header {
         background: rgba(255, 255, 255, 1);
@@ -2075,7 +2078,9 @@ button.passwordArr {
 
 
 @media all and (max-width: 680px) {
-
+    body .logo {
+        padding: 0.5em 0.6em;
+    }
 
     body .displayPhone {
         display: block;
@@ -2147,9 +2152,7 @@ button.passwordArr {
         filter: alpha(opacity=100);
     }
 
-    body .logo {
-        padding: 0.8em;
-    }
+
 
     body .hamburger {
         padding: 1.06em 1.8em;
@@ -2960,7 +2963,7 @@ body .flex-container.Mobile {
 
 .logo {
 
-    padding: 1.8em;
+    padding: 0.5em 0;
     font-size: 1.8rem;
     font-weight: 300;
     /* margin-right: 8%; */
