--- a/main.css
+++ b/main.css
@@ -2061,6 +2061,7 @@ button.passwordArr {
     body .displayPhone {
         display: block;
     }
+
     body .displayTablet {
         display: none;
     }
@@ -2438,7 +2439,7 @@ button.passwordArr {
 
 .slides-item {
     align-items: center;
-    border-radius: 50px;
+    border-radius: 12px;
     display: flex;
     flex-shrink: 0;
     font-size: 100px;
@@ -2463,7 +2464,7 @@ button.passwordArr {
 }
 
 .slider-nav {
-    border-radius: 32px;
+    border-radius: 12px;
     color: var(--Grey700);
     display: inline-flex;
     justify-content: center;
@@ -2475,16 +2476,22 @@ button.passwordArr {
     display: flex;
     align-items: flex-start;
     flex-direction: column;
+    background: transparent;
+    box-shadow: 0 8px 20px rgba(255, 255, 255, 0.3);
 
     /*     
     transition: background-color 0.3s, color 0.3s;
     -webkit-transition: 1s ease-out;
     -o-transition: 1s ease-out;
+
     transition: 1s ease-out;
+    transform: translateY(0px);
 
  */
-    box-shadow: 0 8px 20px rgba(255, 255, 255, 0.3);
-    transform: translateY(0px);
+ transform: translateY(0);
+ transition-timing-function: ease-in;
+ transition: 2s;
+ border: 1px solid transparent;
 
 }
 
@@ -2492,6 +2499,8 @@ button.passwordArr {
 .slider-nav:hover,
 .slider-nav.active {
     color: var(--Grey900);
+    background: var(--Grey100);
+
     /*     
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
     transition: 5s ease-out, background-color 2s;
@@ -2501,13 +2510,19 @@ button.passwordArr {
     transition: 5s ease-out, background-color 2s;
     box-shadow: 0 8px 20px rgba(255, 255, 255, 0.9);
 
+        transition: transform 1.6s ease, -webkit-transform 1.6s ease;
+
+            transform: translateY(0px);
+
      */
 
+     transition: 0.25s;
+     transition-timing-function: ease-out;
+     
+     transform: translateY(100);
+     border: 1px solid var(--Grey200);
 
-    background-color: var(--Grey200);
-    transition: transform .6s ease, -webkit-transform .6s ease;
-    transform: translateY(0px);
-}
+    }
 
 
 
