--- a/main.css
+++ b/main.css
@@ -1321,7 +1321,7 @@ hr {
 .element {
     padding: 0.8em 1em 0;
 
-/* ----     0.8em 1em 0 0;  top, right, bottom, left;
+    /* ----     0.8em 1em 0 0;  top, right, bottom, left;
 
 
 padding: 0.8em 0em 0;
@@ -1787,7 +1787,7 @@ button.passwordArr {
     }
 
     body .logo {
-        padding: 0.5em 1em;
+        padding: 0.5em 0.8em;
     }
 
     body .se-arrow {
@@ -2484,7 +2484,7 @@ button.passwordArr {
     display: inline-flex;
     justify-content: center;
     padding: 12px;
-    margin: 0;
+    margin: 1em;
     position: relative;
     text-decoration: none;
     width: 100%;
@@ -2492,8 +2492,8 @@ button.passwordArr {
     align-items: flex-start;
     flex-direction: column;
     background: transparent;
-    box-shadow: 0 8px 20px rgba(255, 255, 255, 0.3);
-
+    box-shadow: inset 0px 0 0 var(--white), inset 0 0px 0 var(--white), inset 0px 0 0 var(--white), inset 0 0px 0 var(--white);
+    background-color: transparent;
     /*     
     transition: background-color 0.3s, color 0.3s;
     -webkit-transition: 1s ease-out;
@@ -2502,45 +2502,55 @@ button.passwordArr {
     transition: 1s ease-out;
     transform: translateY(0px);
 
+    border: 1px solid transparent;
+
  */
     transform: translateY(0);
     transition-timing-function: ease-in;
-    transition: 2s;
-    border: 1px solid transparent;
+    transition: 1s;
+    transition: background-color 1s;
+
 
 }
+
+/*     
+
+
+
+}
+ */
+
+
 
 .slider-nav:active,
 .slider-nav:hover,
 .slider-nav.active {
     color: var(--Grey900);
-    background: var(--Grey100);
-
+    box-shadow: inset -1px 0 0 var(--white), inset 0 -1px 0 var(--white), inset 1px 0 0 var(--white), inset 0 1px 0 var(--white);
+    background-color: var(--White-transparent);
     /*     
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-    transition: 5s ease-out, background-color 2s;
-    -webkit-transform: translateY(0%);
-    -ms-transform: translateY(0%);
-    transform: translateY(0%);
-    transition: 5s ease-out, background-color 2s;
-    box-shadow: 0 8px 20px rgba(255, 255, 255, 0.9);
+     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+     transition: 5s ease-out, background-color 2s;
+     -webkit-transform: translateY(0%);
+     -ms-transform: translateY(0%);
+     transform: translateY(0%);
+     transition: 5s ease-out, background-color 2s;
+     box-shadow: 0 8px 20px rgba(255, 255, 255, 0.9);
+ 
+     transition: transform 1.6s ease, -webkit-transform 1.6s ease; 
+     transform: translateY(0px);
+     border: 1px solid var(--Grey200);
 
-        transition: transform 1.6s ease, -webkit-transform 1.6s ease;
+     transition: 0.5ms;
 
-        transform: translateY(0px);
+      */
 
-     */
-
-    transition: 0.25s;
     transition-timing-function: ease-out;
-
     transform: translateY(100);
-    border: 1px solid var(--Grey200);
 
 }
 
-
-
+/*     
 
 .slide-1 {
     background-color: var(--Grey200);
@@ -2561,6 +2571,11 @@ button.passwordArr {
 .slide-5 {
     background-color: var(--Grey200);
 }
+     */
+
+
+
+
 
 .carousel__skip-link {
     height: 1px;
@@ -2968,7 +2983,7 @@ body .flex-container.Mobile {
 
 .logo {
 
-    padding: 0.5em 1em;
+    padding: 0.5em 0;
     font-size: 1.8rem;
     font-weight: 300;
     /* margin-right: 8%; */
